# ai-traffic-management-system

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  VISION_INTEGRATION.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
artifacts/comparisons/: 840ed25f-71f4-4a7e-bc98-6dbbd8cc016d.json  952f4bcf-5118-4a43-b3bc-890901ef5472.json  d82e06fb-07c7-4e9b-a0fd-59cd76449744.json  fdc4fb45-9af4-4a31-be81-d6ae0a097422.json
artifacts/policy_variants/: max-redist-20-smooth-05.json
backend/: pyproject.toml
backend/backend/: main.py
backend/backend/routers/: cameras.py  chat.py  emergency.py  experiments.py  metrics.py  policy_variants.py  runs.py  signals.py  simulation.py
backend/backend/services/: carla_service.py  db_service.py  experiment_service.py  simulation_service.py
backend/backend/ws/: handlers.py  manager.py
backend/smoke_tests/: test_app_smoke.py
docs/: ARCHITECTURE.md  CAPSTONE_REPORT.md  DEMO.md  PUBLISHING.md  SCREENSHOTS.md
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js
scripts/: cleanup_standalone_runs.py  generate_combined.py  generate_highway.py  generate_network.py  generate_readme_figures.sh  inspect_carla_junctions.py  run_highway_ab.py  run_races.py  setup_dev.sh
supabase/: seed.sql
supabase/migrations/: 001_create_intersections.sql  002_create_simulation_runs.sql  003_create_signal_logs.sql  004_create_vehicle_snapshots.sql  005_create_metrics.sql  (+6 more)
(+57 files in other folders)
