[project]
name = "traffic-management-system"
version = "0.1.0"
description = "AI-based traffic management and monitoring system"
requires-python = ">=3.9"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = [
    "packages/sumo-engine/tests",
    "packages/cv-pipeline/tests",
    "packages/adaptive-policy/tests",
    "packages/shared/tests",
    "backend/tests",
]
