[project]
name = "traffic-backend"
version = "0.1.0"
description = "FastAPI backend for the traffic management system"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "httpx>=0.27",
    "groq>=0.9",
    "traffic-shared",
    "sumo-engine",
    "adaptive-policy",
    "cv-pipeline",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
